@@ -1,5 +1,10 @@
 2004-10-10  Alan Modra  <amodra@bigpond.net.au>
 
+	* elf-bfd.h (struct eh_frame_hdr_info): Add offsets_adjusted.
+	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Adjust
+	offsets stored in struct eh_cie_fde entries before doing other
+	work.
+
 	* elf-bfd.h (struct eh_cie_fde): Add cie_inf, remove sec.
 	(struct eh_frame_hdr_info): Add last_cie_inf, remove last_cie_offset.
 	* elf-eh-frame.c (_bfd_elf_discard_section_eh_frame): Delete code
